<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home_menu"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/str_bottom_home"
        android:visible="true"
        app:showAsAction="always" />

    <item
        android:id="@+id/home_order"
        android:icon="@drawable/selector_order"
        android:visible="true"
        app:showAsAction="always"
        android:title="@string/str_bottom_order"/>
    <item
        android:id="@+id/home_tracker"
        android:icon="@drawable/selector_tracker"
        android:title="@string/str_bottom_tracker"
        android:visible="true"
        app:showAsAction="always"/>
    <item
        android:id="@+id/home_event"
        android:icon="@drawable/selector_event"
        android:title="@string/str_bottom_event"
        android:visible="true"
        app:showAsAction="always"/>
    <item
        android:id="@+id/home_more"
        android:icon="@drawable/selector_more"
        android:title="Profile"
        android:visible="true"
        app:showAsAction="always" />

</menu>