<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:whatever="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordOneActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foreground="@drawable/image_overlay"
        android:scaleType="fitXY"
        android:src="@drawable/close_up"
        tools:ignore="UnusedAttribute" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#000">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageView_ForgotPasswordOneBack"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:src="@drawable/next" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/poppinslight"
            android:text="@string/str_forgot_title"
            android:textColor="#FFFF00"
            android:textSize="20sp" />

    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:src="@drawable/logo" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">

        <LinearLayout
            android:id="@+id/layout_forgot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/radio_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/white"
                    android:text="@string/email"
                    android:textColor="@color/white"
                    tools:targetApi="lollipop" />

                <RadioButton
                    android:id="@+id/rb_mobile_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:buttonTint="@color/white"
                    android:text="@string/mobile_no"
                    android:textColor="@color/white"
                    tools:targetApi="lollipop" />
            </RadioGroup>

            <com.andreabaccega.widget.FormEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:backgroundTint="@color/colorEditTextUnderLine"
                android:fontFamily="@font/poppinslight"
                android:gravity="center_vertical"
                android:hint="@string/enter_email_id"
                android:inputType="text"
                android:textColor="#FFF"
                android:textColorHint="#FFF"
                android:textSize="16sp"
                android:visibility="gone"
                tools:ignore="UnusedAttribute"
                whatever:customRegexp="[a-zA-Z0-9._-]+@[a-z]+\\.+[a-z]+"
                whatever:emptyErrorString="Please Fill This"
                whatever:testErrorString="Enter Valid Email Id"
                whatever:testType="regexp" />

            <com.andreabaccega.widget.FormEditText
                android:id="@+id/et_mobile"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:backgroundTint="@color/colorEditTextUnderLine"
                android:fontFamily="@font/poppinslight"
                android:gravity="center_vertical"
                android:hint="@string/enter_phone_number"
                android:inputType="number"
                android:maxLength="10"
                android:textColor="#FFF"
                android:textColorHint="#FFF"
                android:textSize="16sp"
                android:visibility="gone"
                app:testType="regexp"
                tools:ignore="UnusedAttribute"
                whatever:customRegexp="[0-9]{10}"
                whatever:emptyErrorString="Please fill this"
                whatever:testErrorString="Enter Valid mobile number" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_ForgotSendCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_forgot"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_bg"
            android:fontFamily="@font/poppinslight"
            android:text="@string/str_forgot_send_code"
            android:textColor="#FF0000" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView_ForgotReSendCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button_ForgotSendCode"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/poppinslight"
            android:text="@string/str_forgot_resend_code"
            android:textColor="#FFFF00"
            android:textSize="18sp"
            android:visibility="invisible" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView_ForgotKnowPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinslight"
            android:text="@string/str_forgot_know_password"
            android:textColor="#FFF"
            android:textSize="17sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView_ForgotLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/avenir_lt_black"
            android:text="@string/str_forgot_login"
            android:textColor="#FFFF00"
            android:textSize="17sp" />

    </LinearLayout>

</RelativeLayout>