<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordTwoActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foreground="@drawable/image_overlay"
        android:scaleType="fitXY"
        android:src="@drawable/close_up"
        tools:ignore="UnusedAttribute" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#000">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageView_ForgotPasswordTwoBack"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="15dp"
            android:src="@drawable/next" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:fontFamily="@font/poppinslight"
            android:text="@string/str_forgot_title"
            android:textColor="#FFFF00"
            android:textSize="22sp" />

    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:src="@drawable/logo" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">

        <com.andreabaccega.widget.FormEditText
            android:id="@+id/et_otp"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:backgroundTint="@color/colorEditTextUnderLine"
            android:fontFamily="@font/poppinslight"
            android:gravity="center_vertical"
            android:hint="Enter OTP"
            android:inputType="number"
            android:textColor="#FFF"
            android:textColorHint="#A3FFFFFF"
            android:textSize="16sp"
            tools:ignore="UnusedAttribute" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_ForgotVerify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_otp"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_bg"
            android:fontFamily="@font/poppinslight"
            android:text="@string/str_forgot_verify"
            android:textColor="#FF0000" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView_ForgotTwoKnowPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/avenir_lt_black"
            android:text="@string/str_forgot_know_password"
            android:textColor="#FFF"
            android:textSize="17sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView_ForgotTwoLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/poppinslight"
            android:text="@string/str_forgot_login"
            android:textColor="#FFFF00"
            android:textSize="17sp" />

    </LinearLayout>

</RelativeLayout>