<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:elevation="5dp"
    app:cardCornerRadius="10dp"
    tools:targetApi="lollipop">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linear_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinslight"
                android:padding="5dp"
                android:text="@string/car_make" />

            <TextView
                android:id="@+id/tv_car_make"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinslight"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinslight"
                android:padding="5dp"
                android:text="@string/car_model" />

            <TextView
                android:id="@+id/tv_car_model"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinslight"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinslight"
                android:padding="5dp"
                android:text="@string/car_color" />

            <TextView
                android:id="@+id/tv_car_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinslight"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_layout_sub_plan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinslight"
                android:padding="5dp"
                android:text="@string/curbside_instruction" />

            <TextView
                android:id="@+id/tv_curbside_instruction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinslight"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
